; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/qib/extr_qib_init.c_qib_postinit_cleanup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/qib/extr_qib_init.c_qib_postinit_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qib_devdata = type { i32 (%struct.qib_devdata*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.qib_devdata*)* @qib_postinit_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qib_postinit_cleanup(%struct.qib_devdata* %0) #0 {
  %2 = alloca %struct.qib_devdata*, align 8
  store %struct.qib_devdata* %0, %struct.qib_devdata** %2, align 8
  %3 = load %struct.qib_devdata*, %struct.qib_devdata** %2, align 8
  %4 = getelementptr inbounds %struct.qib_devdata, %struct.qib_devdata* %3, i32 0, i32 0
  %5 = load i32 (%struct.qib_devdata*)*, i32 (%struct.qib_devdata*)** %4, align 8
  %6 = icmp ne i32 (%struct.qib_devdata*)* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load %struct.qib_devdata*, %struct.qib_devdata** %2, align 8
  %9 = getelementptr inbounds %struct.qib_devdata, %struct.qib_devdata* %8, i32 0, i32 0
  %10 = load i32 (%struct.qib_devdata*)*, i32 (%struct.qib_devdata*)** %9, align 8
  %11 = load %struct.qib_devdata*, %struct.qib_devdata** %2, align 8
  %12 = call i32 %10(%struct.qib_devdata* %11)
  br label %13

13:                                               ; preds = %7, %1
  %14 = load %struct.qib_devdata*, %struct.qib_devdata** %2, align 8
  %15 = call i32 @qib_pcie_ddcleanup(%struct.qib_devdata* %14)
  %16 = load %struct.qib_devdata*, %struct.qib_devdata** %2, align 8
  %17 = call i32 @cleanup_device_data(%struct.qib_devdata* %16)
  %18 = load %struct.qib_devdata*, %struct.qib_devdata** %2, align 8
  %19 = call i32 @qib_free_devdata(%struct.qib_devdata* %18)
  ret void
}

declare dso_local i32 @qib_pcie_ddcleanup(%struct.qib_devdata*) #1

declare dso_local i32 @cleanup_device_data(%struct.qib_devdata*) #1

declare dso_local i32 @qib_free_devdata(%struct.qib_devdata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
